# DSG-Deterministic-Safety-Gate

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  core-ci.yml  decision-engine-tests.yml  js-sdk-build.yml  publish-sdks.yml  python-smoke-test.yml  python-tests.yml  release.yml
artifacts/formal/: VERIFIED_CORE.md  dsg_full_proof.smt2
cli/: dsg.py  sdk_python_shim.py  validator_shim.py
docs/: ARCHITECTURE.md  BADGES.md  CORE_API_RESPONSE_SHAPE.md  GITHUB_CONTEXT_NOT_READY.md  LAUNCH_CHECKLIST.md  MASTER_MULTI_AGENT_ONE_SHOT_REPORT.md  PRODUCTION_ENDPOINT_ALIGNMENT.md  README_FULL.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0-beta.1.md  RFC-0001.md  ROADMAP.md  architecture.md  audit-layer.md  authentication.md  ecosystem-map.md  quickstart.md  release.md
dsg-core/: Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  ruff.toml
dsg-core/src/dsg/: __init__.py  gate.py  harmonics.py  ledger.py  main.py  prod_main.py  stability.py
dsg-core/tests/: test_beta_final.py
examples/: README.md
policies/: default-policy.json  default-policy.yaml
protocol/: RFC-0001.md
reference-node/: .dockerignore  Dockerfile
schemas/: request.json  response.json
scripts/: export_openapi.py
sdk-js/: README.md  index.js  package.json
sdk-python/: README.md  pyproject.toml
sdk-python/src/dsg/: __init__.py  client.py
sdk/js/: README.md  (+2 more)
(+22 files in other folders)
