[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsg-python-sdk"
version = "0.1.0"
description = "Python SDK for DSG Deterministic Safety Gate"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
